--- a/package.json
+++ b/package.json
@@ -17,16 +17,16 @@
     "@types/reactstrap": "^8.7.2",
     "@types/redux-logger": "^3.0.9",
     "axios": "^0.19.2",
-    "bootstrap": "^4.6.1",
+    "bootstrap": "^5.1.3",
     "jquery": "^3.6.0",
     "node-sass": "^4.14.1",
     "popper.js": "^1.16.1",
     "react": "^17.0.2",
+    "react-bootstrap": "^2.0.3",
     "react-dom": "^17.0.2",
     "react-router": "^5.2.1",
     "react-router-dom": "^5.3.0",
     "react-scripts": "4.0.3",
-    "reactstrap": "^8.10.1",
     "redux": "^4.1.2",
     "redux-logger": "^3.0.6",
     "redux-thunk": "^2.4.1",
